Add z-index + position property to h1, icons, resume button

--- a/index.html
+++ b/index.html
@@ -16,75 +16,75 @@
 
 <body>
 
-    <div class="parent">
-        <div id="particles-js" class="particles-js"></div>
-        <!-- navigation -->
-        <div class="offcanvas__wrap" id="home">
-            <nav>
-                <div class="nav">
-                    <div class="row">
-                        <div class="col-9 row">
-                            <div class="col-auto">
-                                <button class="btn btn__menu"><i class="fas fa-bars"></i></button>
-                            </div>
-                            <div class="col-11 nav__dropdown">
-                                <ul class="nav__list">
-                                    <li class="nav__item col-2"><a href="/#home">home</a></li>
-                                    <li class="nav__item col-2"><a href="/#about">about</a></li>
-                                    <li class="nav__item col-2"><a href="/#portfolio">portfolio</a></li>
-                                    <li class="nav__item col-2"><a href="/#contact">contact</a></li>
-                                </ul>
-                            </div>
+    <!-- <div class="parent"> -->
+    <div id="particles-js" class="particles-js"></div>
+    <!-- navigation -->
+    <div class="offcanvas__wrap" id="home">
+        <nav>
+            <div class="nav">
+                <div class="row">
+                    <div class="col-9 row">
+                        <div class="col-auto">
+                            <button class="btn btn__menu"><i class="fas fa-bars"></i></button>
+                        </div>
+                        <div class="col-11 nav__dropdown">
+                            <ul class="nav__list">
+                                <li class="nav__item col-2"><a href="/#home">home</a></li>
+                                <li class="nav__item col-2"><a href="/#about">about</a></li>
+                                <li class="nav__item col-2"><a href="/#portfolio">portfolio</a></li>
+                                <li class="nav__item col-2"><a href="/#contact">contact</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
-            <!-- header -->
-            <header id="header" id="home">
-                <div class="wrapper">
-                    <div class="header">
-                        <div class="col col-5">
-                            <div class="header__image row">
-                                <div class="col-6">
-                                    <!-- <img src="./assets/portfolio-1.jpg" alt="Smiling girl on a background of blue sky"> -->
-                                </div>
+        <!-- header -->
+        <header id="header" id="home">
+            <div class="wrapper">
+                <div class="header">
+                    <div class="col col-5">
+                        <div class="header__image row">
+                            <div class="col-6">
+                                <!-- <img src="./assets/portfolio-1.jpg" alt="Smiling girl on a background of blue sky"> -->
                             </div>
-                            <div>
-                                <h1>Hi, I'm <span class="title-name">Yuliana</span>!</h1>
-                                <!-- <h2>Front - End Developer</h2> -->
-                            </div>
-                            <div class="header__icons">
-                                <ul class="header__list">
-                                    <li class="header__item">
-                                        <a href="https://www.linkedin.com/in/yuliana-hazda-b0ab711a8/" target="_blank"
-                                            rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                    </li>
-                                    <li class="header__item">
-                                        <a href="https://github.com/yuli-ana" target="_blank"
-                                            rel="noreferrer noopener"><i class="fab fa-github"></i>
-                                        </a>
-                                    </li>
-                                    <li class="header__item">
-                                        <a href="https://twitter.com/yulianahazda" target="_blank"
-                                            rel="noreferrer noopener"><i class="fab fa-twitter"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="header__button row">
-                                <a href="https://yuliana.dev/files/yuliana-hazda-resume.pdf" download
-                                    class="col-6 btn btn__resume"><i class="fas fa-download"></i></i>resume</a>
-                            </div>
+                        </div>
+                        <div>
+                            <h1>Hi, I'm <span class="title-name">Yuliana</span>!</h1>
+                            <!-- <h2>Front - End Developer</h2> -->
+                        </div>
+                        <div class="header__icons">
+                            <ul class="header__list">
+                                <li class="header__item">
+                                    <a href="https://www.linkedin.com/in/yuliana-hazda-b0ab711a8/" target="_blank"
+                                        rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                                <li class="header__item">
+                                    <a href="https://github.com/yuli-ana" target="_blank" rel="noreferrer noopener"><i
+                                            class="fab fa-github"></i>
+                                    </a>
+                                </li>
+                                <li class="header__item">
+                                    <a href="https://twitter.com/yulianahazda" target="_blank"
+                                        rel="noreferrer noopener"><i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="header__button row">
+                            <a href="https://yuliana.dev/files/yuliana-hazda-resume.pdf" download
+                                class="col-6 btn btn__resume"><i class="fas fa-download"></i></i>resume</a>
                         </div>
                     </div>
                 </div>
-                <div class="scroll-type1">
-                </div>
-            </header>
+            </div>
+            <div class="scroll-type1">
+            </div>
+        </header>
+        <!-- </div> -->
 
-        </div>
         <button class="btn btn__contact">
             <span class="scroll__hint scroll__hint--right">contact</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80px"
