Update icons position, change colour, add row class

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                                 <h1>Hi, I'm <span class="title-name">Yuliana</span>!</h1>
                                 <!-- <h2>Front - End Developer</h2> -->
                             </div>
-                            <div class="header__icons">
-                                <ul class="header__list">
-                                    <li class="header__item">
+                            <div class="header__icons row">
+                                <ul class="header__list row">
+                                    <li class="header__item col-auto">
                                         <a href="https://www.linkedin.com/in/yuliana-hazda-b0ab711a8/" target="_blank"
                                             rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i>
                                         </a>
                                     </li>
-                                    <li class="header__item">
+                                    <li class="header__item col-auto">
                                         <a href="https://github.com/yuli-ana" target="_blank"
                                             rel="noreferrer noopener"><i class="fab fa-github"></i>
                                         </a>
                                     </li>
-                                    <li class="header__item">
+                                    <li class="header__item col-auto">
                                         <a href="https://twitter.com/yulianahazda" target="_blank"
                                             rel="noreferrer noopener"><i class="fab fa-twitter"></i>
                                         </a>
