--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins&family=Prata&family=Roboto&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/5dbe99caa8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-32x32.png">
     <title>Yuliana Hazda</title>
 </head>
@@ -114,7 +114,7 @@
             <div class="wrapper">
                 <div class="about">
                     <div class="row row--column">
-                        <div class="col-8 about__profile">
+                        <div class="col-8 about__profile" data-aos="fade-right" data-aos-duration="1000">
                             <div class="about__intro">
                                 <h2>About me</h2>
                                 <p>I'm Toronto based Front-End Developer focused on crafting clean and user-friendly
@@ -263,7 +263,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-4 about__personal">
+                        <div class="col-4 about__personal" data-aos="fade-left" data-aos-duration="1000">
                             <div class="about__courses">
                                 <h3>Courses</h3>
                                 <ul class="courses__list">
@@ -345,7 +345,7 @@
                     <h2 class="section-title">Portfolio</h2>
                     <p class="portfolio__description">Below you can see some projects I've been working on lately.</p>
                     <ul class="portfolio__list row">
-                        <li class="portfolio__item col-4">
+                        <li class="portfolio__item col-4" data-aos="fade-right" data-aos-duration="1500">
                             <div class="image__container">
                                 <img src="./assets/project-1.jpg" alt="">
                                 <a href="https://yuli-ana.github.io/yuliana-hazda-project-one/" target="_blank"
@@ -365,7 +365,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="portfolio__item col-4">
+                        <li class="portfolio__item col-4" data-aos="fade-down" data-aos-duration="1500">
                             <div class="image__container">
                                 <img src="./assets/project-2.jpg" alt="">
                                 <a href="https://yuli-ana.github.io/yuliana-hazda-project-two/" target="_blank"
@@ -386,7 +386,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="portfolio__item col-4">
+                        <li class="portfolio__item col-4" data-aos="fade-left" data-aos-duration="1500">
                             <div class="image__container">
                                 <img src="./assets/project-3.jpg" alt="">
                                 <a href="https://yuli-ana.github.io/yulianaHazdaProjectThree/" target="_blank"
@@ -416,7 +416,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="portfolio__item col-4">
+                        <li class="portfolio__item col-4" data-aos="fade-right" data-aos-duration="1500">
                             <div class="image__container">
                                 <img src="./assets/project-4.jpg" alt="">
                                 <a href="https://yuliana-lawrence.github.io/travelAsk/" target="_blank"
@@ -463,7 +463,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="portfolio__item col-4">
+                        <li class="portfolio__item col-4" data-aos="fade-up" data-aos-duration="1500">
                             <div class="image__container">
                                 <img src="./assets/project-5.jpg" alt="">
                                 <a href="https://yuli-ana.github.io/kombucha-lab/" target="_blank"
@@ -512,7 +512,7 @@
                                 </a>
                             </div>
                         </li>
-                        <li class="portfolio__item col-4 class=">
+                        <li class="portfolio__item col-4" data-aos="fade-left" data-aos-duration="1000">
                             <div class="image__container">
                                 <img src="./assets/project-6.jpg" alt="">
                                 <a href="https://shopper-mapper.github.io/shopper-mapper/" target="_blank"
@@ -603,6 +603,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
