--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins&family=Prata&family=Roboto&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins&family=Prata&family=Roboto&display=swap&"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/5dbe99caa8.js" crossorigin="anonymous"></script>
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
@@ -114,7 +114,7 @@
             <div class="wrapper">
                 <div class="about">
                     <div class="row row--column">
-                        <div class="col-8 about__profile" data-aos="fade-right" data-aos-duration="1000">
+                        <div class="col-8 about__profile" data-aos="fade-right" data-aos-duration="1500">
                             <div class="about__intro">
                                 <h2>About me</h2>
                                 <p>I'm Toronto based Front-End Developer focused on crafting clean and user-friendly
@@ -263,7 +263,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-4 about__personal" data-aos="fade-left" data-aos-duration="1000">
+                        <div class="col-4 about__personal" data-aos="fade-left" data-aos-duration="1500">
                             <div class="about__courses">
                                 <h3>Courses</h3>
                                 <ul class="courses__list">
