--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 <div class="wrapper">
                     <div class="header">
                         <div class="col col-5">
-                            <div class="header__image row">
-                                <!-- <div class="col-6"> -->
-                                <!-- <img src="./assets/portfolio-1.jpg" alt="Smiling girl on a background of blue sky"> -->
-                                <!-- </div> -->
-                            </div>
+                            <!-- <div class="header__image row"> -->
+                            <!-- <div class="col-6"> -->
+                            <!-- <img src="./assets/portfolio-1.jpg" alt="Smiling girl on a background of blue sky"> -->
+                            <!-- </div> -->
+                            <!-- </div> -->
                             <div>
                                 <h1>Hi, I'm <span class="title-name">Yuliana</span>!</h1>
                                 <h2>
@@ -80,9 +80,8 @@
                                     class="col-6 btn btn__resume"><i class="fas fa-download"></i></i>resume</a>
                             </div>
                         </div>
+                        <div class="scroll-type1"></div>
                     </div>
-                </div>
-                <div class="scroll-type1">
                 </div>
             </header>
         </div>
