--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
                 <div class="wrapper">
                     <div class="header">
                         <div class="col col-5">
-                            <!-- <div class="header__image row"> -->
-                            <!-- <div class="col-6"> -->
-                            <!-- <img src="./assets/portfolio-1.jpg" alt="Smiling girl on a background of blue sky"> -->
-                            <!-- </div> -->
-                            <!-- </div> -->
                             <div>
                                 <h1>Hi, I'm <span class="title-name">Yuliana</span>!</h1>
                                 <h2>
@@ -120,7 +115,8 @@
                                 <h2>About me</h2>
                                 <div class="row">
                                     <div class="profile-image col-3">
-                                        <img src="./assets/portfolio-1.jpg" alt="">
+                                        <img src="./assets/portfolio-1.jpg"
+                                            alt="Smiling girl on a background of blue sky">
                                     </div>
                                     <div class="col-9">
                                         <p>I'm Toronto based Front-End Developer focused on crafting clean and
