Add a new component cross, add functionality for btn menu (listen for click) + animate

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                     <div class="row">
                         <div class="col-9 row">
                             <div class="col-auto">
-                                <button class="btn btn__menu"><i class="fas fa-bars"></i></button>
+                                <button class="btn btn__menu">
+                                    <!-- <i class=" fas fa-bars"></i>-->
+                                    <div class="inner"></div>
+                                </button>
                             </div>
                             <div class="col-11 nav__dropdown">
                                 <ul class="nav__list">
