--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg class="svg" viewBox="0 0 128 128">
+                                        <svg class="svg" viewBox="0 0 128 128" width="50" height="50">
                                             <title>Git</title>
                                             <path fill="#F34F29"
                                                 d="M124.737 58.378l-55.116-55.114c-3.172-3.174-8.32-3.174-11.497 0l-11.444 11.446 14.518 14.518c3.375-1.139 7.243-.375 9.932 2.314 2.703 2.706 3.461 6.607 2.294 9.993l13.992 13.993c3.385-1.167 7.292-.413 9.994 2.295 3.78 3.777 3.78 9.9 0 13.679-3.78 3.78-9.901 3.78-13.683 0-2.842-2.844-3.545-7.019-2.105-10.521l-13.048-13.048-.002 34.341c.922.455 1.791 1.063 2.559 1.828 3.778 3.777 3.778 9.898 0 13.683-3.779 3.777-9.904 3.777-13.679 0-3.778-3.784-3.778-9.905 0-13.683.934-.933 2.014-1.638 3.167-2.11v-34.659c-1.153-.472-2.231-1.172-3.167-2.111-2.862-2.86-3.551-7.06-2.083-10.576l-14.313-14.313-37.792 37.79c-3.175 3.177-3.175 8.325 0 11.5l55.117 55.114c3.174 3.174 8.32 3.174 11.499 0l54.858-54.858c3.174-3.176 3.174-8.327-.001-11.501z">
@@ -279,7 +279,7 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg class="svg" viewBox="0 0 128 128" width="75" height="75">
+                                        <svg class="svg" viewBox="0 0 128 128" width="50" height="50">
                                             <title>Node package manager</title>
                                             <path id="original-wordmark" class="cls-1"
                                                 d="M2,38.5H126V82.21H64V89.5H36.44V82.21H2ZM8.89,74.93H22.67V53.07h6.89V74.93h6.89V45.79H8.89ZM43.33,45.79V82.21H57.11V74.93H70.89V45.79Zm13.78,7.29H64V67.64H57.11Zm20.67-7.29V74.93H91.56V53.07h6.89V74.93h6.89V53.07h6.89V74.93h6.89V45.79Z">
@@ -287,8 +287,8 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg class="svg" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="75"
-                                            height="75" viewBox="0 0 172 172" style=" fill:#000000;">
+                                        <svg class="svg" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50"
+                                            height="50" viewBox="0 0 172 172" style=" fill:#000000;">
                                             <title>RESTful API</title>
                                             <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1"
                                                 stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"
@@ -309,7 +309,7 @@
                                             title="Web content accessibility guidelines"></i>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg class="svg" viewBox="0 0 128 128">
+                                        <svg class="svg" viewBox="0 0 128 128" width="50" height="50">
                                             <title>GitHub</title>
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z">
@@ -320,16 +320,17 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg enable-background="new 0 0 472.615 472.615" width="50" height="50"
-                                            viewBox="0 0 472.615 472.615" xmlns="http://www.w3.org/2000/svg">
+                                        <svg class="svg" enable-background="new 0 0 472.615 472.615" width="50"
+                                            height="50" viewBox="0 0 472.615 472.615"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <title>Command-line interface</title>
                                             <path
                                                 d="m0 .756v471.103h472.615v-471.103zm74.969 392.648 71.686-71.691-71.686-71.687 13.366-13.366 85.052 85.053-85.052 85.057zm200.293 16.135h-115.241v-18.905h115.241z" />
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg enable-background="new 0 0 396.494 396.494" height="60"
-                                            viewBox="0 0 396.494 396.494" width="60" xmlns="http://www.w3.org/2000/svg">
+                                        <svg class="svg" enable-background="new 0 0 396.494 396.494" height="50"
+                                            viewBox="0 0 396.494 396.494" width="50" xmlns="http://www.w3.org/2000/svg">
                                             <title>Responsive Web Design</title>
                                             <path
                                                 d="m304.42 330.901h-43.219c-1.56 0-2.834-1.273-2.834-2.834v-10.52c0-1.559-1.275-2.834-2.834-2.834h-60.475c-1.56 0-2.835 1.275-2.835 2.834v10.52c0 1.561-1.275 2.834-2.835 2.834h-32.491c-1.56 0-2.835 1.275-2.835 2.834v12.17c0 1.559 1.275 2.834 2.835 2.834h147.521c1.559 0 2.834-1.275 2.834-2.834v-12.17c.002-1.556-1.273-2.834-2.832-2.834z" />
@@ -340,7 +341,8 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg viewBox="0 0 128 128" style="fill: #2C8EBB;" width="50" height="50">
+                                        <svg class="svg" viewBox="0 0 128 128" style="fill: #2C8EBB;" width="50"
+                                            height="50">
                                             <title>Yarn</title>
                                             <path class="cls-1"
                                                 d="M99.24,80.71C94.9,80.76,91.1,83,87.89,85c-6,3.71-9,3.47-9,3.47l-.1-.17c-.41-.67,1.92-6.68-.69-13.84-2.82-7.83-7.3-9.72-6.94-10.32,1.53-2.59,5.36-6.7,6.89-14.36.91-4.64.67-12.28-1.39-16.28-.38-.74-3.78,1.24-3.78,1.24s-3.18-7.09-4.07-7.66c-2.87-1.84-6,7.61-6,7.61a14,14,0,0,0-11.71,4.5,9.64,9.64,0,0,1-3.85,2.27c-.41.14-.91.12-2.15,3.47C43.2,50,48.34,55.74,48.34,55.74s-6.13,4.33-8.4,9.72a24.78,24.78,0,0,0-1.75,11.68s-4.36,3.78-4.64,7.68a12.87,12.87,0,0,0,1.77,7.83,1.94,1.94,0,0,0,2.63.91s-2.9,3.38-.19,4.81c2.47,1.29,6.63,2,8.83-.19,1.6-1.6,1.92-5.17,2.51-6.63.14-.34.62.57,1.08,1a10,10,0,0,0,1.36,1s-3.9,1.68-2.3,5.51c.53,1.27,2.42,2.08,5.51,2.06,1.15,0,13.76-.72,17.12-1.53a4.33,4.33,0,0,0,2.61-1.46,63,63,0,0,0,15.49-7c4.74-3.09,6.68-3.93,10.51-4.84C103.64,85.54,103.43,80.64,99.24,80.71Z">
@@ -351,7 +353,7 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg viewBox="0 0 128 128" width="50" height="50">
+                                        <svg class="svg" viewBox="0 0 128 128" width="50" height="50">
                                             <title>Bootstrap</title>
                                             <path fill="#5B4282"
                                                 d="M75.701 65.603c-2.334-.768-5.694-.603-10.08-.603h-17.621v23h18.844c2.944 0 5.012-.315 6.203-.535 2.099-.376 3.854-1.104 5.264-1.982 1.409-.876 2.568-2.205 3.478-3.881.908-1.676 1.363-3.637 1.363-5.83 0-2.568-.658-4.54-1.975-6.436-1.316-1.896-3.141-2.965-5.476-3.733zM73.282 55.087c2.317-.688 4.064-1.89 5.239-3.487 1.176-1.598 1.763-3.631 1.763-6.044 0-2.286-.549-4.314-1.646-6.054s-2.662-2.413-4.699-3.056c-2.037-.641-5.53-.446-10.48-.446h-15.459v20h16.587c4.042 0 6.939-.38 8.695-.913zM126 18.625c0-9.182-7.443-16.625-16.625-16.625h-91.75c-9.182 0-16.625 7.443-16.625 16.625v91.75c0 9.182 7.443 16.625 16.625 16.625h91.75c9.182 0 16.625-7.443 16.625-16.625v-91.75zm-35.447 66.12c-1.362 2.773-3.047 4.911-5.052 6.415-2.006 1.504-4.521 2.78-7.544 3.548-3.022.769-6.728 1.292-11.113 1.292h-27.844v-69h27.42c5.264 0 9.485.609 12.665 2.002 3.181 1.395 5.671 3.497 7.474 6.395 1.801 2.898 2.702 5.907 2.702 9.071 0 2.945-.8 5.708-2.397 8.308-1.598 2.602-4.011 4.694-7.237 6.292 4.166 1.222 7.37 3.304 9.61 6.248 2.24 2.945 3.36 6.422 3.36 10.432 0 3.227-.681 6.225-2.044 8.997z">
@@ -359,7 +361,7 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <svg height="50" viewBox="0 0 48 48" width="50"
+                                        <svg class="svg" height="50" viewBox="0 0 48 48" width="50"
                                             xmlns="http://www.w3.org/2000/svg"
                                             xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <title>Visual Studio Code</title>
@@ -391,7 +393,7 @@
                                         </svg>
                                     </li>
                                     <li class="col-2 skill-item" data-aos="zoom-in" data-aos-duration="3000">
-                                        <i class="fas fa-heart" title="I ❤️ code"></i>
+                                        <i class="fas fa-heart" title="I 🖤 code"></i>
                                     </li>
                                 </ul>
                             </div>
