--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                                     <div class="overlay">
                                         <div class="overlay__title">
                                             <i class="fas fa-chevron-circle-right"></i>
-                                            <h3>Arora</h3>
+                                            <h3>Arora (PSD conversion)</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-auto"><i class="fab fa-html5"></i></li>
@@ -520,7 +520,7 @@
                                     <div class="overlay">
                                         <div class="overlay__title">
                                             <i class="fas fa-chevron-circle-right"></i>
-                                            <h3>Captured</h3>
+                                            <h3>Captured (multi-page PSD conversion)</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-auto"><i class="fab fa-html5"></i></li>
