Update html attributes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="parent">
         <div id="particles-js" class="particles-js"></div>
         <!-- navigation mobile -->
-        <div class="offcanvas__wrap" id="home">
+        <div>
             <div class="nav-mobile">
                 <nav class="menu">
                     <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
@@ -83,7 +83,7 @@
     </div>
 
     <!-- header -->
-    <header class="section header-section" id="home header">
+    <header class="header-section section offcanvas__wrap" id="home">
         <div class="wrapper">
             <div class="header">
                 <div class="col col-5">
@@ -121,7 +121,6 @@
             </div>
         </div>
     </header>
-    </div>
 
     <button class="btn btn__contact">
         <span class="scroll__hint scroll__hint--right">contact</span>
@@ -142,7 +141,6 @@
                 d="M40.000,-0.000 C62.091,-0.000 80.000,17.909 80.000,40.000 C80.000,62.091 62.091,80.000 40.000,80.000 C17.909,80.000 -0.000,62.091 -0.000,40.000 C-0.000,17.909 17.909,-0.000 40.000,-0.000 Z" />
         </svg>
     </button>
-    </div>
 
 
     <main>
