--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                             alt="Smiling girl on a background of blue sky">
                                     </div>
                                     <div class="col-9">
-                                        <p>I'm Toronto based Front-End Developer focused on crafting clean and
+                                        <p>I'm a Toronto based Front-End Developer focused on crafting clean and
                                             user-friendly
                                             experience. I'm extremely passionate about web development. Coding for me is
                                             more
