Update project link

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                         <li class="portfolio__item col-4" data-aos="zoom-in" data-aos-duration="1500">
                             <div class="image__container">
                                 <img src="./assets/project-2.jpg" alt="">
-                                <a href="https://github.com/yuli-ana/Multi-page-PSD-conversion" target="_blank"
+                                <a href="https://yuli-ana.github.io/Multi-page-PSD-conversion/" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
                                         <div class="overlay__title">
