--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <script src="https://kit.fontawesome.com/5dbe99caa8.js" crossorigin="anonymous"></script>
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-32x32.png">
+
+    <meta property='og:title' content='Portfolio' />
+    <meta property='og:image' content='//yuli-ana.github.io/personal-website/assets/main.gif' />
+    <meta property='og:description' content='Portfolio' />
+    <meta property='og:url' content='//yuli-ana.github.io/personal-website/' />
+
     <title>Yuliana Hazda</title>
 </head>
 
@@ -111,10 +117,6 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="header__button row">
-                        <a href="https://yuliana.dev/files/yuliana-hazda-resume.pdf" download
-                            class="col-6 btn btn__resume"><i class="fas fa-download"></i></i>resume</a>
                     </div>
                 </div>
                 <div class="scroll-type1"></div>
