--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-32x32.png">
 
     <meta property='og:title' content='Portfolio' />
-    <meta property='og:image' content='//yuli-ana.github.io/personal-website/assets/main.gif' />
+    <meta property='og:image' content='./assets/main.gif' />
     <meta property='og:description' content='Portfolio' />
-    <meta property='og:url' content='//yuli-ana.github.io/personal-website/' />
+    <meta property='og:url' content='https://yuliana.dev/' />
 
     <title>Yuliana Hazda</title>
 </head>
