--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-32x32.png">
 
     <meta property='og:title' content='Portfolio' />
-    <meta property='og:image' content='https://yuliana.dev/assets/main.png' />
+    <meta property='og:image' content='https://yuliana.dev/assets/demo.gif' />
     <meta property='og:description' content='Portfolio' />
     <meta property='og:url' content='https://yuliana.dev/' />
 
